<resources>
    <string name="app_name">Bunker</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="Login">Entrar</string>
    <string name="hint_login">Entrar</string>
    <string name="hint_name">Nome e sobrenome</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="hint_description">Descrição</string>
    <string name="hint_url">Url</string>
    <string name="hint_username">Email ou Nome de usuário</string>
    <string name="hint_note">Anotações</string>
    <string name="menu_save">salvar</string>
    <string name="msg_success_saved">Suas informações foram salvas.</string>
    <string name="msg_failed_save">Você precisa preencher todos os campos com exceção das anotações.</string>
    <string name="search_title">O que você está procurando?</string>
    <string name="menu_delete">Excluir</string>
    <string name="status_connecting">Conectando…</string>
    <string name="hint_signup">Cadastre-se</string>
    <string name="hint_unlock">Desbloquear</string>
    <string name="menu_options">Opções</string>
    <string name="menu_configuracoes">Sobre</string>
    <string name="menu_logout">Sair</string>
</resources>
